Update marks in `WidgetsView.swift`

--- a/StuduWidgets/Info.plist
+++ b/StuduWidgets/Info.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>UIStatusBarStyle</key>
-	<string>UIStatusBarStyleDarkContent</string>
+	<string>UIStatusBarStyleDefault</string>
 </dict>
 </plist>
