--- a/StuduWidgets.xcodeproj/xcshareddata/xcschemes/StuduWidgets.xcscheme
+++ b/StuduWidgets.xcodeproj/xcshareddata/xcschemes/StuduWidgets.xcscheme
@@ -29,6 +29,16 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       codeCoverageEnabled = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "90B2519627CAEC510076504F"
+               BuildableName = "StuduWidgetsTests.xctest"
+               BlueprintName = "StuduWidgetsTests"
+               ReferencedContainer = "container:StuduWidgets.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
