--- a/StuduWidgets.xcodeproj/xcshareddata/xcschemes/WidgetsExtension.xcscheme
+++ b/StuduWidgets.xcodeproj/xcshareddata/xcschemes/WidgetsExtension.xcscheme
@@ -43,6 +43,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "90B2519627CAEC510076504F"
+               BuildableName = "StuduWidgetsTests.xctest"
+               BlueprintName = "StuduWidgetsTests"
+               ReferencedContainer = "container:StuduWidgets.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
